--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
+<!DOCTYPE html>
 <html><head>
   <meta charset="UTF-8">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image</title>
-  
   <script src="p5.min.js"></script>
   <script src="p5.dom.min.js"></script>
   <script src="ml5.min.js" type="text/javascript"></script>
-
-  <style></style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <style>
+    canvas{
+      display:none;
+    }
+    img{
+      width:100%;
+    }
+    input{
+      position: fixed;
+      bottom:100px;
+      right:0px;
+    }
+  </style>
 </head>
 
 <body>
-  <script src="sketch.js"></script>
-</body></html>
+  <center>
+    <h1>
+      What celebrity do you look like?
+    </h1>
+    <p1 id = "response">
+      Loading machine learning model...
+    </p1>
+  </center>
+  <script src="index.js"></script>
+</body>
+
+</html>
+
